Student/Resources/Govern/blueprints/CAF_Workshop_Landing_Zone_Demo/Artifacts/artifact-template-vnet-nsg--new.json
{
  "kind": "template",
  "properties": {
    "displayName": "LandingZone_Vnet_NSG",
    "description": "vnet with 5 subnets and nsgs",
    "dependsOn": [],
    "template": {
      "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
      "contentVersion": "1.0.0.0",
      "parameters": {
        "vnetName": {
          "type": "string",
          "defaultValue": "CAFVNET",
          "metadata": {
            "description": "VNet name"
          }
        },
        "vnetAddressPrefix": {
          "type": "string",
          "defaultValue": "10.0.0.0/16",
          "metadata": {
            "description": "Address prefix"
          }
        },
        "gatewaysubnetPrefix": {
          "type": "string",
          "defaultValue": "10.0.255.224/27",
          "metadata": {
            "description": "gateway Subnet Prefix"
          }
        },
        "gatewaysubnetName": {
          "type": "string",
          "defaultValue": "gatewaysubnet",
          "metadata": {
            "description": "Gateway Subnet Name"
          }
        },
        "FirewallPrefix": {
          "type": "string",
          "defaultValue": "10.0.4.0/24",
          "metadata": {
            "description": "Firewall Subnet Prefix"
          }
        },
        "FirewallsubnetName": {
          "type": "string",
          "defaultValue": "AzureFirewallSubnet",
          "metadata": {
            "description": "Firewall Subnet Name"
          }
        },
        "WebtierPrefix": {
          "type": "string",
          "defaultValue": "10.0.1.0/24",
          "metadata": {
            "description": "Webtier Subnet Prefix"
          }
        },
        "WebtiersubnetName": {
          "type": "string",
          "defaultValue": "WebtierSubnet",
          "metadata": {
            "description": "Webtier Subnet Name"
          }
        },
        "BusinesstierPrefix": {
          "type": "string",
          "defaultValue": "10.0.2.0/24",
          "metadata": {
            "description": "Businesstier Subnet Prefix"
          }
        },
        "BusinesstiersubnetName": {
          "type": "string",
          "defaultValue": "BusinesstierSubnet",
          "metadata": {
            "description": "Businesstier Subnet Name"
          }
        },
        "DatatierPrefix": {
          "type": "string",
          "defaultValue": "10.0.3.0/24",
          "metadata": {
            "description": "Datatier Subnet Prefix"
          }
        },
        "DatatiersubnetName": {
          "type": "string",
          "defaultValue": "DatatierSubnet",
          "metadata": {
            "description": "Datatier Subnet Name"
          }
        },
        "AzureBastionPrefix": {
          "type": "string",
          "defaultValue": "10.0.0.224/27",
          "metadata": {
            "description": "AzureBastion Subnet Prefix"
          }
        },
        "AzureBastionsubnetName": {
          "type": "string",
          "defaultValue": "AzureBastionSubnet",
          "metadata": {
            "description": "AzureBastion Subnet Name"
          }
        },
        "WebtierNSGName": {
          "type": "string",
          "defaultValue": "Webtier_NSG",
          "metadata": {
            "description": "This is name of the networkSecurityGroup that will be assigned to Webtier Subnet"
          }
        },
        "BusinessTierNSGName": {
          "type": "string",
          "defaultValue": "Businesstier_NSG",
          "metadata": {
            "description": "This is name of the networkSecurityGroup that will be assigned to Businesstier Subnet"
          }
        },
        "DatatierNSGName": {
          "type": "string",
          "defaultValue": "Datatier_NSG",
          "metadata": {
            "description": "This is name of the networkSecurityGroup that will be assigned to Datatier Subnet"
          }
        },
        "AzureBastionNSGName": {
          "type": "string",
          "defaultValue": "AzureBastion_NSG",
          "metadata": {
            "description": "This is name of the networkSecurityGroup that will be assigned to AzureBastion Subnet"
          }
        },
        "location": {
          "type": "string",
          "defaultValue": "[resourceGroup().location]",
          "metadata": {
            "description": "Location for all resources."
          }
        }
      },
      "variables": {},
      "resources": [
        {
          "apiVersion": "2015-05-01-preview",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[parameters('WebtierNSGName')]",
          "location": "[parameters('location')]",
          "properties": {
            "securityRules": [
              {
                "name": "rdp_rule",
                "properties": {
                  "description": "Allow RDP",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3389",
                  "sourceAddressPrefix": "[parameters('AzureBastionPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "web_rule",
                "properties": {
                  "description": "Allow WEB",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "80",
                  "sourceAddressPrefix": "Internet",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 101,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Datatier",
                "properties": {
                  "description": "Block Datatier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('DatatierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 102,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Businesstier",
                "properties": {
                  "description": "Block Businesstier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('BusinesstierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 103,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Internet",
                "properties": {
                  "description": "Block Internet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "Internet",
                  "access": "Deny",
                  "priority": 200,
                  "direction": "Outbound"
                }
              }
            ]
          }
        },
        {
          "apiVersion": "2015-05-01-preview",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[parameters('BusinessTierNSGName')]",
          "location": "[parameters('location')]",
          "properties": {
            "securityRules": [
              {
                "name": "Allow_Webtier",
                "properties": {
                  "description": "Allow Webtier Subnet",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "[parameters('WebtierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "rdp_rule",
                "properties": {
                  "description": "Allow RDP",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3389",
                  "sourceAddressPrefix": "[parameters('AzureBastionPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 101,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Datatier",
                "properties": {
                  "description": "Block Datatier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('DatatierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 102,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Webtier",
                "properties": {
                  "description": "Block Webtier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('WebtierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 103,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Internet_Outbound",
                "properties": {
                  "description": "Block Internet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "Internet",
                  "access": "Deny",
                  "priority": 200,
                  "direction": "Outbound"
                }
              }
            ]
          }
        },
        {
          "apiVersion": "2015-05-01-preview",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[parameters('DatatierNSGName')]",
          "location": "[parameters('location')]",
          "properties": {
            "securityRules": [
              {
                "name": "Allow_Businesstier",
                "properties": {
                  "description": "Allow BusinessTier Subnet",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "1433",
                  "sourceAddressPrefix": "[parameters('BusinesstierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Allow_AzureBastion",
                "properties": {
                  "description": "Allow AzureBastion Subnet",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('AzureBastionPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 101,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Webtier",
                "properties": {
                  "description": "Block Webtier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('WebtierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 102,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Businesstier",
                "properties": {
                  "description": "Block Businesstier Subnet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('BusinesstierPrefix')]",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 103,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Block_Internet",
                "properties": {
                  "description": "Block Internet",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "Internet",
                  "access": "Deny",
                  "priority": 200,
                  "direction": "Outbound"
                }
              }
            ]
          }
        },
        {
          "apiVersion": "2019-02-01",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[parameters('AzureBastionNSGName')]",
          "location": "[parameters('location')]",
          "properties": {
            "securityRules": [
              {
                "name": "bastion-in-allow",
                "properties": {
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationPortRange": "443",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "bastion-control-in-allow",
                "properties": {
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "sourceAddressPrefix": "GatewayManager",
                  "destinationPortRanges": [
                    "443",
                    "4443"
                  ],
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 120,
                  "direction": "Inbound"
                }
              },
              {
                "name": "bastion-in-deny",
                "properties": {
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 900,
                  "direction": "Inbound"
                }
              },
              {
                "name": "bastion-vnet-out-allow",
                "properties": {
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationPortRanges": [
                    "22",
                    "3389"
                  ],
                  "destinationAddressPrefix": "VirtualNetwork",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Outbound"
                }
              },
              {
                "name": "bastion-azure-out-allow",
                "properties": {
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationPortRange": "443",
                  "destinationAddressPrefix": "AzureCloud",
                  "access": "Allow",
                  "priority": 120,
                  "direction": "Outbound"
                }
              }
            ]
          }
        },
        {
          "apiVersion": "2018-10-01",
          "type": "Microsoft.Network/virtualNetworks",
          "name": "[parameters('vnetName')]",
          "location": "[parameters('location')]",
          "dependsOn": [
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('WebtierNSGName'))]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('BusinessTierNSGName'))]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('DatatierNSGName'))]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('AzureBastionNSGName'))]"
          ],
          "properties": {
            "addressSpace": {
              "addressPrefixes": [
                "[parameters('vnetAddressPrefix')]"
              ]
            },
            "subnets":[
              {
              "name": "[parameters('FirewallsubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('FirewallPrefix')]"
                        }
              },
              {
              "name": "[parameters('gatewaysubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('gatewaysubnetPrefix')]"
                        }
              },
              {
              "name": "[parameters('WebtiersubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('WebtierPrefix')]",
                        "networkSecurityGroup": {
                          "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('WebtierNSGName'))]"
                        }
                        }
              },
              {
              "name": "[parameters('BusinesstiersubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('BusinesstierPrefix')]",
                        "networkSecurityGroup": {
                          "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('BusinessTierNSGName'))]"
                        }
                        }
              },
              {
              "name": "[parameters('DatatiersubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('DatatierPrefix')]",
                        "networkSecurityGroup": {
                          "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('DatatierNSGName'))]"
                        }
                        }
              },
              {
              "name": "[parameters('AzureBastionsubnetName')]",
                      "properties": {
                        "addressPrefix": "[parameters('AzureBastionPrefix')]",
                        "networkSecurityGroup": {
                          "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('AzureBastionNSGName'))]"
                        }
                        }
              }
            ]
          },
          "resources": [
          ]
        }
      ]
    },
    "resourceGroup": "Network-RG",
    "parameters": {
      "vnetName": {
        "value": "[parameters('vnet_vnetName')]"
      },
      "vnetAddressPrefix": {
        "value": "[parameters('vnet_vnetAddressPrefix')]"
      },
      "location": {
        "value": "[parameters('vnet_location')]"
      },
      "gatewaysubnetPrefix": {
        "value": "[parameters('landingZoneVnet_gatewaysubnetPrefix')]"
      },
      "gatewaysubnetName": {
        "value": "[parameters('landingZoneVnet_gatewaysubnetName')]"
      },
      "FirewallPrefix": {
        "value": "[parameters('landingZoneVnet_FirewallPrefix')]"
      },
      "FirewallsubnetName": {
        "value": "[parameters('landingZoneVnet_FirewallsubnetName')]"
      },
      "WebtierPrefix": {
        "value": "[parameters('landingZoneVnet_WebtierPrefix')]"
      },
      "WebtiersubnetName": {
        "value": "[parameters('landingZoneVnet_WebtiersubnetName')]"
      },
      "BusinesstierPrefix": {
        "value": "[parameters('landingZoneVnet_BusinesstierPrefix')]"
      },
      "BusinesstiersubnetName": {
        "value": "[parameters('landingZoneVnet_BusinesstiersubnetName')]"
      },
      "DatatierPrefix": {
        "value": "[parameters('landingZoneVnet_DatatierPrefix')]"
      },
      "DatatiersubnetName": {
        "value": "[parameters('landingZoneVnet_DatatiersubnetName')]"
      },
      "AzureBastionPrefix": {
        "value": "[parameters('landingZoneVnet_AzureBastionPrefix')]"
      },
      "AzureBastionsubnetName": {
        "value": "[parameters('landingZoneVnet_AzureBastionsubnetName')]"
      },
      "WebtierNSGName": {
        "value": "[parameters('landingZone_Vnet_NSG_WebtierNSGName')]"
      },
      "BusinessTierNSGName": {
        "value": "[parameters('landingZone_Vnet_NSG_BusinessTierNSGName')]"
      },
      "DatatierNSGName": {
        "value": "[parameters('landingZone_Vnet_NSG_DatatierNSGName')]"
      },
      "AzureBastionNSGName": {
        "value": "[parameters('landingZone_Vnet_NSG_AzureBastionNSGName')]"
      }
    }
  }
}
